--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,40 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+	--background: #ffffff;
+	--foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+	:root {
+		--background: #0a0a0a;
+		--foreground: #ededed;
+	}
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+	color: var(--foreground);
+	background: var(--background);
+	font-family: Arial, Helvetica, sans-serif;
+	height: 100vh;
+	width: 100vw;
+	overflow: hidden;
+}
+
+.card {
+	perspective: 800px;
+}
+.card__content {
+	transform-style: preserve-3d;
+}
+.flip {
+	transform: rotateX(0.5turn);
+}
+
+.card__front,
+.card__back {
+	backface-visibility: hidden;
+}
+.card__back {
+	transform: rotateX(0.5turn);
 }
