--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,7 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	height: 100vh;
 	width: 100vw;
-	overflow: hidden;
+	/* overflow: hidden; */
 }
 
 .card {
