--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+	font-family: 'Helvetica';
+	src: url('./fonts/Helvetica.ttf') format('truetype');
+	font-style: normal;
+}
+
 :root {
 	--background: #ffffff;
 	--foreground: #171717;
@@ -17,7 +23,7 @@
 body {
 	color: var(--foreground);
 	background: var(--background);
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Helvetica ,Arial, sans-serif;
 	height: 100vh;
 	width: 100vw;
 }
@@ -25,9 +31,11 @@ body {
 .card {
 	perspective: 800px;
 }
+
 .card__content {
 	transform-style: preserve-3d;
 }
+
 .flip {
 	transform: rotateX(0.5turn);
 }
@@ -36,6 +44,7 @@ body {
 .card__back {
 	backface-visibility: hidden;
 }
+
 .card__back {
 	transform: rotateX(0.5turn);
 }
